# filesync

./: .filesyncignore  .gitignore  Cargo.toml  README.md
src/: main.rs
src/authenticate/: auth.rs  auth_code.rs  browser.rs  mod.rs  token_storing.rs
src/file_diffs/: google_drive.rs
src/filesystem/: download.rs  mod.rs  upload.rs  zip.rs
