[package]
name = "filesync"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-drive = "0.5.1"
hyper = "0.14.24"
tokio = "1.25.0"
home = "0.5.4"
zip = "0.6.4"
walkdir = "2.3.2"
hyper-tls = "0.5.0"
serde_json = "1.0.93"
anyhow = "1.0.75"
